# oGuardiao

./: .gitignore  .replit  CONTRIBUTING.md  LICENSE  README.md  app.py  auth.py  config.py  dependencies.md  forms.py  main.py  models.py  pyproject.toml  replit.nix  routes.py  utils.py
docs/: README.md  api_reference.md  arquitetura.md  documentacao_tecnica.md  instalacao.md  roadmap.md
static/css/: custom.css  styles.css  tailwind.css
static/js/: alerts.js  certificates.js  charts.js  companies.js  main.js
templates/: accept_invite.html  base.html  dashboard.html  error.html  index.html  layout.html  login.html  mfa_setup.html  mfa_verify.html  profile.html  register.html  reports.html  settings.html
templates/audit/: index.html
templates/certificates/: index.html  upload.html  view.html
templates/companies/: create.html  edit.html  index.html  view.html
templates/components/: alert.html  certificate_card.html  company_card.html  navbar.html  sidebar.html
templates/emails/: certificate_expiration.html  invite.html
templates/empresas/: index.html
templates/groups/: create.html  edit.html  index.html
templates/users/: index.html  invite.html
